Завершить матч может только один из капитанов или админ турнира
